kustomize/base/pywhoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pywhoami
spec:
  type: ClusterIP
  selector:
    app: pywhoami
  ports:
  - port: 3000
    targetPort: 8080
