kustomize/base/pywhoami/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pywhoami.example.com
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: pywhoami
              servicePort: 8080
